--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
+  "homepage": "https://github.com/cool1997/social-network",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.13.1"
   }
 }
